# ARDUINO_NUCLEO_F429ZI

./: .gitignore  CMakeLists.txt  README.md
.circleci/: config.yml
Arduino_Core_STM32/cmake/: ensure_core_deps.cmake  toolchain.cmake
Arduino_Core_STM32/cores/arduino/: main.cpp
Arduino_Core_STM32/variants/STM32F4xx/F427Z(G-I)T_F429ZET_F429Z(G-I)(T-Y)_F437Z(G-I)T_F439Z(G-I)(T-Y)/: variant_NUCLEO_F4x9ZI.cpp
C12832/: C12832.cpp  C12832.h
LwIP/: CMakeLists.txt
STM32Ethernet/: CMakeLists.txt
STM32_CAN/.github/workflows/: compile-examples.yml  spell-check.yml
include/: IHM.h  JOG.h  RGB.h  STM32FreeRTOSConfig_extra.h  couleur.h  hal_conf_extra.h  mp3.h  my_header.h
src/: main.cpp  mp3.cpp  my_functions.cpp
